# athena

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  dependencies.cmake
src/: CMakeLists.txt
src/backend/generic/: CMakeLists.txt
src/backend/generic/lib/: CMakeLists.txt  CodeGen.cpp  Executor.cpp  ExecutorImpl.cpp  ExecutorImpl.hpp  GenericExecutor.cpp  GraphPartitionPlanner.cpp  GraphPartitionPlanner.hpp  ScriptOperationInternal.cpp  ScriptOperationInternal.hpp
src/backend/generic/lib/allocators/: LayerAllocator.cpp  LayerAllocator.hpp  TrivialAllocator.hpp
src/backend/generic/lib/jit/: CMakeLists.txt  PolarJIT.cpp  PolarJIT.hpp
src/backend/generic/runtime/: CMakeLists.txt
src/backend/generic/runtime/cuda/: CMakeLists.txt  CudaAllocator.hpp  CudaContext.cpp  CudaContext.hpp  CudaDevice.cpp  CudaDevice.hpp  CudaEvent.cpp  CudaEvent.hpp  api.cpp  utils.hpp
src/backend/generic/runtime/driver/: CMakeLists.txt  DynamicLibrary.hpp  DynamicLibrary_posix.cpp  DynamicLibrary_win32.cpp  RuntimeDriver.cpp  RuntimeDriver.hpp  config.h.in
src/backend/generic/runtime/hip/: CMakeLists.txt  HIPContext.cpp  HIPContext.hpp  HIPDevice.cpp  HIPDevice.hpp  api.cpp  utils.hpp
src/backend/generic/runtime/host/: HostDevice.hpp
src/backend/generic/runtime/metal/: CMakeLists.txt  MetalAllocator.hh  MetalContext.hh  MetalContext.mm  MetalDevice.hh  MetalDevice.mm  MetalEvent.hh  MetalEvent.mm  api.mm  spirv_converter.cpp  spirv_converter.hpp
src/backend/generic/runtime/opencl/: OpenClDevice.cpp  OpenClDevice.h
src/backend/generic/runtime/support/: CMakeLists.txt  api.hpp  routines.cpp
src/backend/generic/runtime/sycl/: BufferAllocator.cpp  BufferAllocator.h  SYCLContext.cpp  SYCLContext.h  SYCLDevice.cpp  SYCLDevice.h  USMAllocator.h
src/backend/generic/runtime/utils/: utils.hpp
src/backend/generic/runtime/vulkan/: CMakeLists.txt  VulkanAllocator.hpp  VulkanContext.cpp  VulkanContext.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanEvent.cpp  VulkanEvent.hpp  api.cpp  utils.hpp
src/backend/llvm/: CMakeLists.txt  CodeGen.cpp  GraphPartitionPlanner.cpp  GraphPartitionPlanner.h  LLVMExecutor.cpp
src/backend/llvm/allocators/: LayerAllocator.cpp  LayerAllocator.h
src/backend/llvm/jit/: AthenaJIT.cpp  AthenaJIT.h  CMakeLists.txt
src/bindings/python/: CMakeLists.txt  context.cpp  setup.py
src/bindings/python/direct/: AbstractNode.hpp  Context.cpp  Context.hpp  Graph.cpp  Graph.hpp  Node.hpp  Operation.hpp  module.cpp
src/core/: CMakeLists.txt  Entity.cpp  PublicEntity.cpp  libinfo.cpp
src/core/context/: Context.cpp
src/core/context/internal/: ContextInternal.cpp
src/core/graph/: Graph.cpp
src/core/graph/internal/: GraphCompiler.cpp  GraphInternal.cpp
src/core/loader/internal/: AbstractLoaderInternal.cpp
src/core/node/internal/: AbstractNodeInternal.cpp  InputNodeInternal.cpp  NodeInternal.cpp  OutputNodeInternal.cpp
src/core/operation/internal/: OperationInternal.cpp
src/core/tensor/: ShapeView.cpp  TensorShape.cpp
src/core/tensor/internal/: TensorInternal.cpp
src/io/: CMakeLists.txt  DotModel.cpp
src/loaders/: CMakeLists.txt  ConstantLoader.cpp  MemcpyLoader.cpp
src/loaders/internal/: ConstantLoaderInternal.cpp  DummyLoaderInternal.cpp  MemcpyLoaderInternal.cpp
src/operation/: CMakeLists.txt
src/operation/internal/: AddOperationInternal.cpp  CombineOperationInternal.cpp  Conv2DOperationInternal.cpp  CopyOperationInternal.cpp  DivideOperationInternal.cpp  LogLossOperationInternal.cpp  MatMulOperationInternal.cpp  MulConcatOperationInternal.cpp  MulOperationInternal.cpp  Pool2DOperationInternal.cpp  ReLUOperationInternal.cpp  SigmoidOperationInternal.cpp  SoftmaxOperationInternal.cpp
src/utils/: CMakeLists.txt  Memory.cpp
src/utils/allocator/: AbstractMemoryResource.cpp  StatelessMemoryResource.cpp  TensorAllocator.cpp
src/utils/error/: Error.cpp
src/utils/logger/: Logger.cpp  log.cpp
src/utils/string/: String.cpp  StringView.cpp
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt
tests/integration/JIT/: CMakeLists.txt  core.cpp  ir.cpp  main.cpp
tests/integration/OpenCLRuntime/: main.cpp
tests/integration/operations/: AddOperation.cpp  CMakeLists.txt  CombineOperation.cpp  Conv2DOperation.cpp  DivideOperation.cpp  LogLossOperation.cpp  MatMulOperation.cpp  MulConcatOperation.cpp  MulOperation.cpp  OperationTest.hpp  Pool2DOperation.cpp  ReLUOperation.cpp  SigmoidOperation.cpp  SoftmaxOperation.cpp
tests/regression/backend/mlir/: basic.cpp
tests/unit/: CMakeLists.txt
tests/unit/backend/generic/: CMakeLists.txt
tests/unit/backend/llvm/: LayerAllocator.cpp
tests/unit/backend/llvm_jit/: AthenaJIT.cpp  CMakeLists.txt
tests/unit/core/: CMakeLists.txt  Context.cpp  Gradient.cpp  Graph.cpp  ShapeView.cpp  TensorShape.cpp  Traverse.cpp  main.cpp
tests/unit/io/: CMakeLists.txt  DotModel.cpp
tests/unit/utils/: CMakeLists.txt  MemoryAndAllocators.cpp  Pointers.cpp
utils/PolarScript/lib/: CMakeLists.txt  CodeGenAction.cpp  CompilerFrontend.cpp  KernelAttrInfo.cpp  MlirGen.cpp  MlirGen.hpp  Pattern.cpp
utils/PolarScript/lib/Patterns/: CompoundStmtPattern.hpp  GPUFunctionPattern.hpp  StandalonePatterns.cpp  TranslationUnitPattern.hpp  TypedefPattern.hpp
utils/PolarScript/lib/headers/: __id.hpp  __types.hpp  polar_script
utils/PolarScript/tools/psoc/: CMakeLists.txt  main.cpp
utils/dialects/lib/Conversion/: CMakeLists.txt  GraphToRuntimePass.cpp  RuntimeToLLVM.cpp
utils/dialects/lib/Passes/: BarrierLegalizerPass.cpp  CMakeLists.txt  DeployDefaultFunctions.cpp  KernelMaterializerPass.cpp  KernelOutliningPass.cpp  LegalizeRTForLoweringPass.cpp  ProduceNVVMPass.cpp  RelationDestructorPass.cpp  ReleaseDependencyPass.cpp  RuntimeShapeInferencePass.cpp  SaveKernelPass.cpp
utils/dialects/lib/PolarGraph/: CMakeLists.txt  ComputationalOpInterface.cpp  PeepholePatterns.cpp  PolarGraphDialect.cpp  PolarGraphOps.cpp
utils/dialects/lib/PolarRuntime/: CMakeLists.txt  PolarRuntimeDialect.cpp  PolarRuntimeOps.cpp
utils/dialects/tools/opt/: CMakeLists.txt  main.cpp
utils/lspolar/: CMakeLists.txt  main.cpp
(+297 files in other folders)
